First touch ups (to be discarded, probably)

--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Android-ArtGallery</string>
+
+    <string name="login_hintA">Username</string>
+    <string name="login_hintB">Password</string>
+    <string name="login_button">Login</string>
+
 </resources>
