--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="password_hint">Password</string>
     <string name="login_button">Login</string>
     <string name="signup_button">Sign Up</string>
+    <string name="test_button">Test</string>
 
 
 </resources>
