--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="password_hint">Password</string>
     <string name="login_button">Login</string>
     <string name="signup_button">Sign Up</string>
+    <string name="title">Welcome to the Online Art Gallery!</string>
     <string name="test_button">Test</string>
+    <string name="browse_artworks">Browse Artworks</string>
+
 </resources>
