--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="test_button">HOME</string>
     <string name="browse_artworks">Browse Artworks</string>
     <string name="home">Home</string>
+    <string-array name="edit_type">
+        <item>Painting</item>
+        <item>Sculpture</item>
+        <item>Photography</item>
+        <item>Other</item>
+    </string-array>
+    <string-array name="for_sale">
+        <item>Yes</item>
+        <item>No</item>
+    </string-array>
 </resources>
