--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="test_button">HOME</string>
     <string name="browse_artworks">Browse Artworks</string>
     <string name="home">Home</string>
+    <string name="artworks_button">Artworks</string>
     <string-array name="edit_type">
         <item>Painting</item>
         <item>Sculpture</item>
