--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">ArtGallery</string>
+    <string name="login_image">Image of a hall</string>
+    <string name="textMain">WELCOME TO THE MOBILE ART GALLERY</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="login_button">Login</string>
     <string name="signup_button">Sign Up</string>
-    <string name="title">Welcome to the Online Art Gallery!</string>
+    <string name="returnButton">Return to login</string>
+    <string name="textHome">Home</string>
     <string name="test_button">HOME</string>
     <string name="browse_artworks">Browse Artworks</string>
     <string name="home">Home</string>
