--- a/ArtGallery-Android/app/src/main/res/values/strings.xml
+++ b/ArtGallery-Android/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="login_button">Login</string>
     <string name="signup_button">Sign Up</string>
     <string name="returnButton">Return to login</string>
+    <string name="returnButton2">Return to home</string>
     <string name="textHome">Home</string>
     <string name="test_button">HOME</string>
-    <string name="browse_artworks">Browse Artworks</string>
+    <string name="browse_artworks">BROWSE ARTWORKS</string>
     <string name="home">Home</string>
     <string name="artworks_button">Artworks</string>
     <string-array name="edit_type">
